--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -158,7 +158,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.138.161.171;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.74.202;
 allow 162.251.5.152;
@@ -228,7 +227,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
-allow 18.235.239.82;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -353,7 +351,6 @@ allow 185.220.101.144;
 allow 185.220.101.145;
 allow 185.220.101.146;
 allow 185.220.101.147;
-allow 185.220.101.148;
 allow 185.220.101.149;
 allow 185.220.101.15;
 allow 185.220.101.150;
@@ -494,6 +491,7 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
+allow 185.241.208.212;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.243.218.110;
@@ -803,7 +801,6 @@ allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.61.252.121;
 allow 202.94.246.210;
@@ -819,7 +816,6 @@ allow 204.85.191.9;
 allow 204.8.96.100;
 allow 204.8.96.101;
 allow 204.8.96.102;
-allow 204.8.96.103;
 allow 204.8.96.104;
 allow 204.8.96.105;
 allow 204.8.96.106;
@@ -959,8 +955,23 @@ allow 23.137.253.108;
 allow 23.137.253.110;
 allow 23.137.253.9;
 allow 23.152.24.77;
+allow 23.154.177.10;
+allow 23.154.177.11;
+allow 23.154.177.12;
+allow 23.154.177.13;
+allow 23.154.177.14;
+allow 23.154.177.15;
+allow 23.154.177.2;
+allow 23.154.177.3;
+allow 23.154.177.4;
+allow 23.154.177.5;
+allow 23.154.177.6;
+allow 23.154.177.7;
+allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -983,6 +994,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:12:759::1;
@@ -993,6 +1005,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
+allow 2602:ffc5:105:302::313d:48d9;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
@@ -1103,7 +1116,6 @@ allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f530:8002::19;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
-allow 2620:7:6001::103;
 allow 2620:7:6001::104;
 allow 2620:7:6001::105;
 allow 2620:7:6001::106;
@@ -1215,6 +1227,7 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:5e0:36:c506::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
@@ -1380,7 +1393,6 @@ allow 2a0b:f4c2:1::144;
 allow 2a0b:f4c2:1::145;
 allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
-allow 2a0b:f4c2:1::148;
 allow 2a0b:f4c2:1::149;
 allow 2a0b:f4c2:1::150;
 allow 2a0b:f4c2:1::151;
@@ -1668,7 +1680,7 @@ allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.124.186;
+allow 46.195.124.226;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1724,6 +1736,7 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 52.87.93.40;
 allow 5.34.182.203;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1866,6 +1879,7 @@ allow 93.95.230.54;
 allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
+allow 93.99.104.138;
 allow 93.99.104.18;
 allow 94.102.51.15;
 allow 94.140.115.63;
