--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -126,6 +126,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:12:759::1;
@@ -136,6 +137,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
+allow 2602:ffc5:105:302::313d:48d9;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
@@ -246,7 +248,6 @@ allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f530:8002::19;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
-allow 2620:7:6001::103;
 allow 2620:7:6001::104;
 allow 2620:7:6001::105;
 allow 2620:7:6001::106;
@@ -357,6 +358,7 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:5e0:36:c506::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
@@ -522,7 +524,6 @@ allow 2a0b:f4c2:1::144;
 allow 2a0b:f4c2:1::145;
 allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
-allow 2a0b:f4c2:1::148;
 allow 2a0b:f4c2:1::149;
 allow 2a0b:f4c2:1::150;
 allow 2a0b:f4c2:1::151;
