--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -158,7 +158,6 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 155.138.161.171;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.74.202;
 set_real_ip_from 162.251.5.152;
@@ -228,7 +227,6 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.48.251.188;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.235.239.82;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -353,7 +351,6 @@ set_real_ip_from 185.220.101.144;
 set_real_ip_from 185.220.101.145;
 set_real_ip_from 185.220.101.146;
 set_real_ip_from 185.220.101.147;
-set_real_ip_from 185.220.101.148;
 set_real_ip_from 185.220.101.149;
 set_real_ip_from 185.220.101.15;
 set_real_ip_from 185.220.101.150;
@@ -494,6 +491,7 @@ set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
+set_real_ip_from 185.241.208.212;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
 set_real_ip_from 185.243.218.110;
@@ -803,7 +801,6 @@ set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.226.98;
 set_real_ip_from 202.61.252.121;
 set_real_ip_from 202.94.246.210;
@@ -819,7 +816,6 @@ set_real_ip_from 204.85.191.9;
 set_real_ip_from 204.8.96.100;
 set_real_ip_from 204.8.96.101;
 set_real_ip_from 204.8.96.102;
-set_real_ip_from 204.8.96.103;
 set_real_ip_from 204.8.96.104;
 set_real_ip_from 204.8.96.105;
 set_real_ip_from 204.8.96.106;
@@ -959,8 +955,23 @@ set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.9;
 set_real_ip_from 23.152.24.77;
+set_real_ip_from 23.154.177.10;
+set_real_ip_from 23.154.177.11;
+set_real_ip_from 23.154.177.12;
+set_real_ip_from 23.154.177.13;
+set_real_ip_from 23.154.177.14;
+set_real_ip_from 23.154.177.15;
+set_real_ip_from 23.154.177.2;
+set_real_ip_from 23.154.177.3;
+set_real_ip_from 23.154.177.4;
+set_real_ip_from 23.154.177.5;
+set_real_ip_from 23.154.177.6;
+set_real_ip_from 23.154.177.7;
+set_real_ip_from 23.154.177.8;
+set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
@@ -983,6 +994,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:12:759::1;
@@ -993,6 +1005,7 @@ set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:95b7::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
+set_real_ip_from 2602:ffc5:105:302::313d:48d9;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
@@ -1103,7 +1116,6 @@ set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
-set_real_ip_from 2620:7:6001::103;
 set_real_ip_from 2620:7:6001::104;
 set_real_ip_from 2620:7:6001::105;
 set_real_ip_from 2620:7:6001::106;
@@ -1215,6 +1227,7 @@ set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
+set_real_ip_from 2a01:5e0:36:c506::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
@@ -1380,7 +1393,6 @@ set_real_ip_from 2a0b:f4c2:1::144;
 set_real_ip_from 2a0b:f4c2:1::145;
 set_real_ip_from 2a0b:f4c2:1::146;
 set_real_ip_from 2a0b:f4c2:1::147;
-set_real_ip_from 2a0b:f4c2:1::148;
 set_real_ip_from 2a0b:f4c2:1::149;
 set_real_ip_from 2a0b:f4c2:1::150;
 set_real_ip_from 2a0b:f4c2:1::151;
@@ -1668,7 +1680,7 @@ set_real_ip_from 45.95.169.255;
 set_real_ip_from 45.95.202.48;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
-set_real_ip_from 46.195.124.186;
+set_real_ip_from 46.195.124.226;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1724,6 +1736,7 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 52.87.93.40;
 set_real_ip_from 5.34.182.203;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1866,6 +1879,7 @@ set_real_ip_from 93.95.230.54;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
 set_real_ip_from 93.99.104.128;
+set_real_ip_from 93.99.104.138;
 set_real_ip_from 93.99.104.18;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.140.115.63;
