--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -104,7 +104,6 @@ allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
-allow 109.104.153.22;
 allow 109.169.33.163;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -240,7 +239,6 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
-allow 185.10.16.41;
 allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.112.144.11;
@@ -910,6 +908,7 @@ allow 204.8.96.83;
 allow 204.8.96.84;
 allow 204.8.96.85;
 allow 204.8.96.86;
+allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
@@ -1211,6 +1210,7 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
+allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
@@ -1586,7 +1586,6 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
-allow 3.225.24.208;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1709,7 +1708,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 52.140.33.255;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1760,6 +1758,7 @@ allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.147;
 allow 66.78.40.160;
+allow 67.202.34.238;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
@@ -1775,6 +1774,7 @@ allow 77.221.159.192;
 allow 77.221.159.193;
 allow 77.221.159.75;
 allow 77.232.143.248;
+allow 77.238.226.156;
 allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.236;
@@ -1824,6 +1824,7 @@ allow 87.118.122.51;
 allow 87.120.254.132;
 allow 88.209.197.8;
 allow 88.80.20.86;
+allow 89.110.68.71;
 allow 89.147.108.209;
 allow 89.147.108.62;
 allow 89.147.108.90;
