--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -104,7 +104,6 @@ set_real_ip_from 108.181.124.143;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
-set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -240,7 +239,6 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
-set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.112.144.11;
@@ -910,6 +908,7 @@ set_real_ip_from 204.8.96.83;
 set_real_ip_from 204.8.96.84;
 set_real_ip_from 204.8.96.85;
 set_real_ip_from 204.8.96.86;
+set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
@@ -1211,6 +1210,7 @@ set_real_ip_from 2620:7:6001::ffff:c759:e653;
 set_real_ip_from 2620:7:6001::ffff:c759:e654;
 set_real_ip_from 2620:7:6001::ffff:c759:e655;
 set_real_ip_from 2620:7:6001::ffff:c759:e656;
+set_real_ip_from 2620:7:6001::ffff:c759:e657;
 set_real_ip_from 2620:7:6001::ffff:c759:e658;
 set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 27.255.75.198;
@@ -1586,7 +1586,6 @@ set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.225.24.208;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.239.59;
@@ -1709,7 +1708,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 52.140.33.255;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
@@ -1760,6 +1758,7 @@ set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.147;
 set_real_ip_from 66.78.40.160;
+set_real_ip_from 67.202.34.238;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
@@ -1775,6 +1774,7 @@ set_real_ip_from 77.221.159.192;
 set_real_ip_from 77.221.159.193;
 set_real_ip_from 77.221.159.75;
 set_real_ip_from 77.232.143.248;
+set_real_ip_from 77.238.226.156;
 set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.236;
@@ -1824,6 +1824,7 @@ set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.209.197.8;
 set_real_ip_from 88.80.20.86;
+set_real_ip_from 89.110.68.71;
 set_real_ip_from 89.147.108.209;
 set_real_ip_from 89.147.108.62;
 set_real_ip_from 89.147.108.90;
