--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -120,6 +120,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -158,7 +159,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.138.161.171;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.74.202;
 allow 162.251.5.152;
@@ -213,6 +213,7 @@ allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
+allow 178.31.102.195;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -285,6 +286,7 @@ allow 185.191.204.254;
 allow 185.193.158.134;
 allow 185.193.52.180;
 allow 185.193.66.127;
+allow 185.195.237.238;
 allow 185.195.71.10;
 allow 185.195.71.11;
 allow 185.195.71.12;
@@ -491,7 +493,6 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.212;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.243.218.110;
@@ -796,6 +797,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -909,7 +911,6 @@ allow 204.8.96.83;
 allow 204.8.96.84;
 allow 204.8.96.85;
 allow 204.8.96.86;
-allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
@@ -948,7 +949,6 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
-allow 23.137.248.69;
 allow 23.137.250.34;
 allow 23.137.253.108;
 allow 23.137.253.110;
@@ -997,7 +997,6 @@ allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
-allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1102,6 +1101,7 @@ allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
+allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:a140:2186:5418::1;
@@ -1209,7 +1209,6 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
-allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
@@ -1598,7 +1597,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.215.163.102;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1646,6 +1644,7 @@ allow 45.56.104.167;
 allow 45.61.184.47;
 allow 45.61.185.172;
 allow 45.61.186.203;
+allow 45.61.187.200;
 allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
@@ -1679,7 +1678,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.124.226;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1748,6 +1746,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.86.179.179;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
